--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 	},
 	"dependencies": {
 		"@opennextjs/cloudflare": "^1.3.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.18.1",
+		"lucide-react": "^0.522.0",
 		"next": "15.3.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
